--- a/NpcGenDataEditorByLuka/NpcGenDataEditorByLuka.csproj
+++ b/NpcGenDataEditorByLuka/NpcGenDataEditorByLuka.csproj
@@ -9,7 +9,7 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>NpcGenDataEditorByLuka</RootNamespace>
     <AssemblyName>Npcgen Editor By Luka</AssemblyName>
-    <TargetFrameworkVersion>v4.5.1</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <TargetFrameworkProfile />
@@ -53,13 +53,23 @@
       <HintPath>..\packages\CyotekImageBox.1.1.5.1\lib\net20\Cyotek.Windows.Forms.ImageBox.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="DevExpress.Data.Desktop.v22.2, Version=22.2.3.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
+    <Reference Include="DevExpress.Drawing.v22.2, Version=22.2.3.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
+    <Reference Include="DevExpress.Data.v22.2, Version=22.2.3.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
+    <Reference Include="DevExpress.Printing.v22.2.Core, Version=22.2.3.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
+    <Reference Include="DevExpress.Sparkline.v22.2.Core, Version=22.2.3.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
+    <Reference Include="DevExpress.Utils.v22.2, Version=22.2.3.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
+    <Reference Include="DevExpress.XtraBars.v22.2, Version=22.2.3.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
+    <Reference Include="DevExpress.XtraEditors.v22.2, Version=22.2.3.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
     <Reference Include="LBLIBRARY">
       <HintPath>..\..\LBLIBRARY\LBLIBRARY\bin\Release\LBLIBRARY.dll</HintPath>
     </Reference>
     <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Data.Linq" />
     <Reference Include="System.Xaml" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -85,6 +95,12 @@
     <Reference Include="WindowsFormsIntegration" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AddFromMap.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="AddFromMap.Designer.cs">
+      <DependentUpon>AddFromMap.cs</DependentUpon>
+    </Compile>
     <Compile Include="DynamicObjectsForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -133,6 +149,9 @@
     <Compile Include="TesteMapa.Designer.cs">
       <DependentUpon>TesteMapa.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="AddFromMap.resx">
+      <DependentUpon>AddFromMap.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="DynamicObjectsForm.resx">
       <DependentUpon>DynamicObjectsForm.cs</DependentUpon>
       <SubType>Designer</SubType>
@@ -143,6 +162,7 @@
     <EmbeddedResource Include="MobsNpcsForm.resx">
       <DependentUpon>MobsNpcsForm.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Properties\licenses.licx" />
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <SubType>Designer</SubType>
